[gd_scene load_steps=4 format=2]

[ext_resource path="res://resources/ui_theme.tres" type="Theme" id=1]
[ext_resource path="res://sprites/ui.png" type="Texture" id=2]
[ext_resource path="res://scripts/Title.gd" type="Script" id=3]

[node name="Title" type="Node2D"]
script = ExtResource( 3 )
title = "Dungeon"
level = 8

[node name="LeftLeaves" type="Sprite" parent="."]
position = Vector2( -58, 0 )
texture = ExtResource( 2 )
centered = false
offset = Vector2( -27, 0 )
flip_h = true
hframes = 2
vframes = 8
frame = 4

[node name="RightLeaves" type="Sprite" parent="."]
position = Vector2( 58, 0 )
texture = ExtResource( 2 )
centered = false
hframes = 2
vframes = 8
frame = 4

[node name="Label" type="Label" parent="."]
margin_left = -27.0
margin_right = 27.0
margin_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 1 )
text = "Dungeon - VIII"
align = 1
valign = 1

[connection signal="resized" from="Label" to="." method="_on_Label_resized"]
